# deeplens

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
.claude/agents/: agent-architect.md  prompt-engineer.md  reviewer.md  shell-builder.md  tool-smith.md
.github/workflows/: deploy-site.yml
patches/: @ai-sdk+openai-compatible+2.0.30.patch
scripts/: build-sidecar.js  prefetch-pkg-node.js  rename-sidecar.js
site/: astro.config.mjs  package-lock.json  package.json
site/.astro/: settings.json
specs/: chat.md  requirements-v2.md  requirements.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: appicon.icns  icon.icns
src-tauri/src/: lib.rs  main.rs
src/agent/: events.ts  explorer.ts  generator.ts  tools.ts  translator.ts
src/api/: index.ts  middleware.ts  server.ts  sidecar-server.ts
src/cli/: index.ts
src/config/: env.ts  ignore.ts  project-settings.ts
src/embedding/: chunker.ts  client.ts  index.ts  indexer.ts
src/export/: cli.ts  index.ts
src/mcp/: cli.ts  server.ts
src/outline/: parser.ts  review.ts  types.ts
src/projects/: registry.ts
src/prompts/: explorer.ts  generator.ts  overview.ts  summary.ts  translator.ts
src/search/: deep.ts  fast.ts  index.ts  tools.ts
src/sidecar/: index.ts
src/tools/: grep-search.ts  list-files.ts  read-file-snippet.ts  read-file.ts  render-mermaid.ts  (+1 more)
ui/: components.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
(+170 files in other folders)
