[package]
name = "deeplens"
version = "0.1.0"
edition = "2021"

[lib]
name = "deeplens_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
sha2 = "0.10"
tokio = { version = "1", features = ["time"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["sha2"] }
base64 = "0.22"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
